--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@ckeditor/ckeditor5-vue": "^1.0.3",
         "@popperjs/core": "^2.5.3",
         "bootstrap-vue": "^2.17.3",
-        "portal-vue": "^2.1.7"
+        "portal-vue": "^2.1.7",
+        "vuelidate": "^0.7.6"
     }
 }
