--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@popperjs/core": "^2.5.3",
         "bootstrap-vue": "^2.17.3",
         "portal-vue": "^2.1.7",
+        "vue-multiselect": "^2.1.6",
         "vuelidate": "^0.7.6"
     }
 }
