--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "bootstrap-vue": "^2.17.3",
         "portal-vue": "^2.1.7",
         "vue-multiselect": "^2.1.6",
-        "vuelidate": "^0.7.6"
+        "vuelidate": "^0.7.6",
+        "vuex": "^3.6.0"
     }
 }
